--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
+* {
+  font-family: 'Ubuntu', sans-serif;
+}
+
 .btn-primary {
   border-color: #46b06a;
 }
@@ -16,5 +22,22 @@ blockquote {
 }
 
 p {
+  color: #92a2b0;
+}
+
+/* table {
+ border-collapse: collapse;
+ width: 100%;
+ color: #92a2b0;
+}
+td {
+ border-top: 1px solid #ccc;
+ border-bottom: 1px solid #ccc;
+ padding-top: : 0.6rem;
+} */
+
+table, th, td {
+  border: 1px solid #92a2b0;
+  border-collapse: collapse;
   color: #92a2b0;
 }
