--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
 
 * {
   font-family: 'Ubuntu', sans-serif;
@@ -41,4 +42,32 @@ table, th, td {
 
 footer a {
   border-radius: 10px;
+}
+
+pre {
+  background-color:#ccc;
+  color:#222;
+  padding:5px;
+  border-radius:3px;
+}
+
+code {
+  font-family: 'Source Code Pro'!important, monospace!important;
+}
+
+blockquote {
+  background-color:#ccc;
+  padding:5px;
+  border-radius:5px;
+}
+
+blockquote p {
+  color: #222;
+}
+
+blockquote pre {
+  background-color:#222;
+  color:#eee;
+  padding:5px;
+  border-radius:3px;
 }
