--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap');
 
 * {
-  font-family: 'Ubuntu', sans-serif;
+  font-family: 'Ubuntu', sans-serif !important;
 }
 
 .btn {
@@ -26,17 +26,17 @@ blockquote {
   padding-left: 8px;
 }
 
-p {
-  color: #92a2b0;
+p, ul {
+  color: #c8d7e6;
 }
 
 table, th, td {
-  border: 1px solid #92a2b0;
+  border: 1px solid #c8d7e6;
   border-collapse: collapse;
-  color: #92a2b0;
+  color: #c8d7e6;
 }
 
-.post-single-content a {
+.post-single-content a, .post-single-content ul {
   font-size: 0.95em;
 }
 
@@ -52,7 +52,8 @@ pre {
 }
 
 code {
-  font-family: 'Source Code Pro'!important, monospace!important;
+  font-family: 'Fira Code', monospace !important;
+  font-style: normal;
 }
 
 blockquote {
