--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap');
+@import url('syntax.css');
 
 * {
   font-family: 'Ubuntu', sans-serif !important;
@@ -51,7 +52,7 @@ pre {
   border-radius:3px;
 }
 
-code {
+code, pre code * {
   font-family: 'Fira Code', monospace !important;
   font-style: normal;
 }
